--- a/html/lack.html
+++ b/html/lack.html
@@ -32,19 +32,19 @@
 				gibt es jeweils Vor- und Nachteile, die man wissen sollte.</span>
 			</div>
 			</div>
-	
+
 	<div class="mycontainerzwo">
-		<div class="thumbnail2">	
+		<div class="thumbnail2">
 			<div id="caption2">
 			<h2 id="xx">Wachs</h2>
-			</div>	
+			</div>
 		<div>
 		<table class="proncon">
 					<tr>
 						<th colspan="1">Vorteile</th>
 						<th colspan="1">Nachteile</th>
 					</tr>
-					
+
 					<tr>
 						<td colspan="1">
 						<ul>
@@ -54,7 +54,7 @@
 							<li>besteht oft aus natürlichen Inhaltsstoffen, wie Carnauba Wachs
 						</ul>
 						</td>
-						
+
 						<td colspan="1">
 						<ul>
 							<li>ist nur eine dünne Schicht über dem Lack</li>
@@ -63,14 +63,14 @@
 						</td>
 					</tr>
 				</table>
-				</div>	
-			</div>		
+				</div>
+			</div>
 		<div class="thumbnail2">
-		
+
 			<div id="caption3">
 			<h2 id="xy">Versiegelung</h2>
 			</div>
-			
+
 			<div>
 			<table class="proncon">
 				<tr>
@@ -96,28 +96,27 @@
 				</tr>
 			</table>
 			</div>
-		</div>	
+		</div>
 	</div>
-			<!-- footer -->		
+			<!-- footer -->
 <div class="footer-basic">
 		<footer>
-		
+
 			<div class="social">
 			<a href="#"><i class="icon ion-social-instagram"></i></a>
 			<a href="#"><i class="icon ion-social-twitter"></i></a>
 			<a href="#"><i class="icon ion-social-facebook"></i></a>
 			</div>
-			
+
 			<ul class="list-inline">
 				<li class="list-inline-item"><a href="start.html">Startseite</a></li>
 				<li class="list-inline-item"><a href="404.html">Impressum</a></li>
 				<li class="list-inline-item"><a href="404.html">AGB</a></li>
 				<li class="list-inline-item"><a href="404.html">Datenschutz</a></li>
 			</ul>
-			
-			<p class="copyright">Marcus © 2019 Webanwendung</p>
+
+			<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
 		</footer>
 	</div>
    </body>
    </html>
-		
