--- a/html/polish.html
+++ b/html/polish.html
@@ -25,7 +25,7 @@
 				<li><a href="calc.html">Mischungsverhältnisrechner</a></li>
 			</ul>
 		</nav>
-		
+
 			<!-- Blog start -->
 	<div class="container space">
 		<div class="row">
@@ -39,21 +39,21 @@
 						</span>
 					</div>
 					</div>
-	
+
 					<div class="col-lg-8 col-md-10 mx-auto"><br>
 					<a href="#">
 						<img class="img-fluid" src="">
 					</a>
 					<h2 class="section-heading">Lack Kneten</h2>
 						<p>Um hartnäckigere Verschmutzungen, wie Flugrost, angetrocknete Teerspritzer und Baumharze, Industrieablagerungen etc. zu entfernen,
-							muss der Lack geknetet werden. Hierfür braucht man zum einen eine Reinigungsknete und eine Clay Lube (Wasser-Shampoo-Gemisch), 
+							muss der Lack geknetet werden. Hierfür braucht man zum einen eine Reinigungsknete und eine Clay Lube (Wasser-Shampoo-Gemisch),
 							was z.B. der Hersteller Petzoldt's anbietet. Hierbei sollte man darauf achten, dass die Knete und der Lack immer genug mit der Clay Lube benetzt sind. Die Knete
 							sollte niemals trocken auf dem Lack zum Einsatz kommen. Wenn man mit der Reinigungsknete und der Clay Lube das komplette Fahrzeug geknetet hat, ist der Lack rein und somit
 							perfekt für die Politur vorbereitet. Wären noch Schmutzpartikel auf dem Lack, so würde man diese beim Polieren in den Lack einreiben, deshalb ist dieser Schritt wichtig.</p>
 
 						<h2 class="section-heading">Lack polieren</h2>
-						<p>Je nach Lackzustand (Anzahl und Tiefe der Kratzer) gibt es hier viele verschiedene Vorgehensweisen. Zunächst braucht man eine Poliermaschine, 
-									am besten eine sogenannte Exzenter-Poliermaschine. Diese ist für Anfänger besser geeignet, da es weniger Hitzeentwicklung gibt und man somit nicht so leicht etwas am Lack beschädigen kann. 
+						<p>Je nach Lackzustand (Anzahl und Tiefe der Kratzer) gibt es hier viele verschiedene Vorgehensweisen. Zunächst braucht man eine Poliermaschine,
+									am besten eine sogenannte Exzenter-Poliermaschine. Diese ist für Anfänger besser geeignet, da es weniger Hitzeentwicklung gibt und man somit nicht so leicht etwas am Lack beschädigen kann.
 									Die andere Variante ist die Rotations-Poliermaschine, diese hat eine größere Kraft und somit eine höhere Hitzeentwicklung, wodurch man teilweise auch schneller ans Ziel kommen kann. Des weiteren gibt es viele verschiedene Polituren, von minimalem Abrieb bis zu starker Abtrageleistung. Das gilt genauso für die Polierpads, je nach Härte und Struktur des Pads kann man eine hohe Abtrageleistung oder
 									eine geringe Abtrageleistung erzielen. Somit kann man individuell je nach Lackzustand selbst entscheiden, welche Kombination man wählt. Hierbei ist jedoch zu beachten, sollte man eine starke Politur
 									mit einem harten Pad nutzen, so entstehen durch die große Kraft Hologramme (unschöne Spiegelung der Lacks im Licht) auf dem Lack. Deshalb sollte man später noch eine weitere Runde mit einem weichen Pad
@@ -70,7 +70,7 @@
 									</a>
 									in leicht überlappenden Bahnen über den Lack. Die Bahnen fährt man mit ein paar cm/sek ab, also nicht zu schnell. Allerdings sollte man auch nicht ewig auf einer Stelle verharren, da sonst die Wärmeentwicklung zu stark
 									wird und den Lack schädigen kann. Hat man nun das gewünschte Glanzergebnis  auf dem Fahrzeuglack erreicht, so nimmt man die Politurüberreste mit einem Mikrofastertuch und einem Kontrollreiniger
-									(Isopropanol-Gemisch) ab. Bei diesem Schritt wird der Lack ebenso durch das Isopropanol komplett entfettet und somit perfekt für die Lackversiegelung vorbereitet. 
+									(Isopropanol-Gemisch) ab. Bei diesem Schritt wird der Lack ebenso durch das Isopropanol komplett entfettet und somit perfekt für die Lackversiegelung vorbereitet.
 									</p>
 						<a href="#">
 							<img class="img-fluid" src="../img/AbklebenUndPoliturerbsen.png">
@@ -79,25 +79,25 @@
 				</div>
 			</div>
 
-	
-			<!-- footer -->		
+
+			<!-- footer -->
 <div class="footer-basic">
 		<footer>
-		
+
 			<div class="social">
 			<a href="#"><i class="icon ion-social-instagram"></i></a>
 			<a href="#"><i class="icon ion-social-twitter"></i></a>
 			<a href="#"><i class="icon ion-social-facebook"></i></a>
 			</div>
-			
+
 			<ul class="list-inline">
 				<li class="list-inline-item"><a href="start.html">Startseite</a></li>
 				<li class="list-inline-item"><a href="404.html">Impressum</a></li>
 				<li class="list-inline-item"><a href="404.html">AGB</a></li>
 				<li class="list-inline-item"><a href="404.html">Datenschutz</a></li>
 			</ul>
-			
-			<p class="copyright">Marcus © 2019 Webanwendung</p>
+
+			<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
 		</footer>
 	</div>
   </body>
