--- a/html/start.html
+++ b/html/start.html
@@ -23,10 +23,10 @@
 		<nav>
 			<ul>
 				<li><a href="start.html">Startseite</a></li>
-				<li><a href="carclean.html">Autowäsche</a></li>
-				<li><a href="polish.html">Polieren</a></li>
-				<li><a href="lack.html">Versiegelung</a></li>
-				<li><a href="calc.html">Mischungsverhältnisrechner</a></li>
+				<li><a href="carclean.html">Produkte - 1</a></li>
+				<li><a href="polish.html">Produkte - 2</a></li>
+				<li><a href="lack.html">Produkte - 3</a></li>
+				<li><a href="calc.html">Warenkorb</a></li>
 			</ul>
 		</nav>
 
@@ -34,29 +34,18 @@
 		<section class="tippszu">
 			<div class="bildle first">
 				<div class="ueber1">
-					<h1><a href="carclean.html">Autowäsche</a></h1>
-					<h3>Hochdruckreinigung & Handwäsche</h3>
-				</div>
-				<div class="gebrabbl">
-					<p>Auto waschen ist wichtig.</p>
+					<h1><a href="carclean.html">Produkt - 1</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="polish.html">Polieren</a></h1>
-					<h3>Lack Polieren und Kneten</h3>
-				</div>
-				<div class="gebrabbl">
-					<p>Polieren ist wie rasieren, "Mann" sollte es öfters machen.</p>
+					<h1><a href="polish.html">Produkt - 2</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="lack.html">Lackversiegelung</a></h1>
+					<h1><a href="lack.html">Produkt - 3</a></h1>
 
-				</div>
-				<div class="gebrabbl">
-					<p>Versiegeln Sie, was Sie Lieben.</p>
 				</div>
 			</div>
 		</section>
@@ -91,12 +80,12 @@
 
 						<div>
 							<p>
-								Kein Problem! Drücken Sie unsere Navigationsleiste von links nach rechts Schritt für Schritt
-									durch und befolgen Sie die Anleitungen.<br> Danach wird ihr Auto wieder in neuem Glanz erstrahlen,
+								Kein Problem! Schauen sie sich unsere Produkte an, indem sie über die Navigationsleiste oder durch das Drücken auf
+								 die obigen Bilder zu den Produkten gelangen.
+								<br> Durch die Produkte wird ihr Auto wieder in neuem Glanz erstrahlen,
 									wie ein echter Neuwagen!
 							</p>
 						</div>
-						<a href="carclean.html" class="primary-btn">Weiter Lesen</a>
 					</div>
 				</div>
 			</div>
@@ -105,18 +94,6 @@
 				<!-- footer -->
 	<div class="footer-basic">
 			<footer>
-
-				<div class="social">
-				<a href="#"><i class="icon ion-social-instagram"></i></a>
-				<a href="#"><i class="icon ion-social-twitter"></i></a>
-				<a href="#"><i class="icon ion-social-facebook"></i></a>
-				</div>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="start.html">Startseite</a></li>
-					<li class="list-inline-item"><a href="404.html">Impressum</a></li>
-					<li class="list-inline-item"><a href="404.html">AGB</a></li>
-					<li class="list-inline-item"><a href="404.html">Datenschutz</a></li>
-				</ul>
 				<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
 			</footer>
 		</div>
