--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -16,13 +16,18 @@
 
 </head>
   <body>
+    <div class="pointer">
+			<div class="logo" onclick="window.location.href='start.html'">
+	  		<img src="../img/DeluxeCar.png"/>
+	  	</div>
+		</div>
 	<nav>
 			<ul>
-				<li><a href="start.html">Startseite</a></li>
-				<li><a href="carclean.html">Autowäsche</a></li>
-				<li><a href="polish.html">Polieren</a></li>
-				<li><a href="lack.html">Versiegelung</a></li>
-				<li><a href="calc.html">Mischungsverhältnisrechner</a></li>
+        <li><a href="start.html">Startseite</a></li>
+				<li><a href="Verkauf1.html">Produkte - 1</a></li>
+				<li><a href="Verkauf2.html">Produkte - 2</a></li>
+				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
 
@@ -83,20 +88,6 @@
 			<!-- footer -->
 <div class="footer-basic">
 		<footer>
-
-			<div class="social">
-			<a href="#"><i class="icon ion-social-instagram"></i></a>
-			<a href="#"><i class="icon ion-social-twitter"></i></a>
-			<a href="#"><i class="icon ion-social-facebook"></i></a>
-			</div>
-
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="start.html">Startseite</a></li>
-				<li class="list-inline-item"><a href="404.html">Impressum</a></li>
-				<li class="list-inline-item"><a href="404.html">AGB</a></li>
-				<li class="list-inline-item"><a href="404.html">Datenschutz</a></li>
-			</ul>
-
 			<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
 		</footer>
 	</div>
