--- a/html/start.html
+++ b/html/start.html
@@ -19,32 +19,37 @@
 	-->
 </head>
 	<body>
-		<!-- Navigation und so -->
+		<div class="pointer">
+			<div class="logo" onclick="window.location.href='start.html'">
+	  		<img src="../img/DeluxeCar.png"/>
+	  	</div>
+		</div>
 		<nav>
 			<ul>
 				<li><a href="start.html">Startseite</a></li>
-				<li><a href="carclean.html">Produkte - 1</a></li>
-				<li><a href="polish.html">Produkte - 2</a></li>
-				<li><a href="lack.html">Produkte - 3</a></li>
-				<li><a href="calc.html">Warenkorb</a></li>
+				<li><a href="Verkauf1.html">Produkte - 1</a></li>
+				<li><a href="Verkauf2.html">Produkte - 2</a></li>
+				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
+
 
 		<!-- Tipps zu -->
 		<section class="tippszu">
 			<div class="bildle first">
 				<div class="ueber1">
-					<h1><a href="carclean.html">Produkt - 1</a></h1>
+					<h1><a href="Verkauf1.html">Produkt - 1</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="polish.html">Produkt - 2</a></h1>
+					<h1><a href="Verkauf2.html">Produkt - 2</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="lack.html">Produkt - 3</a></h1>
+					<h1><a href="Verkauf3.html">Produkt - 3</a></h1>
 
 				</div>
 			</div>
