--- a/html/oder_process.html
+++ b/html/oder_process.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Startseite</title>
+    <title>Bestellprozess</title>
 
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/Stylesheet.css">
@@ -27,9 +27,9 @@
 		<nav>
 			<ul>
 				<li><a href="start.html">Startseite</a></li>
-				<li><a href="Verkauf1.html">Produkte - 1</a></li>
-				<li><a href="Verkauf2.html">Produkte - 2</a></li>
-				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="Verkauf1.html">Handwäsche</a></li>
+				<li><a href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+				<li><a href="Verkauf3.html">Versiegelungen und Wachse</a></li>
 				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
@@ -37,7 +37,7 @@
 				<!-- footer -->
 	<div class="footer">
 			<footer>
-				<p>Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
+				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
 			</footer>
 		</div>
 	</body>
