--- a/html/start.html
+++ b/html/start.html
@@ -27,9 +27,9 @@
 		<nav>
 			<ul>
 				<li><a href="start.html">Startseite</a></li>
-				<li><a href="Verkauf1.html">Produkte - 1</a></li>
-				<li><a href="Verkauf2.html">Produkte - 2</a></li>
-				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="Verkauf1.html">Handwäsche</a></li>
+				<li><a href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+				<li><a href="Verkauf3.html">Versiegelungen und Wachse</a></li>
 				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
@@ -39,17 +39,17 @@
 		<section class="tippszu">
 			<div class="bildle first">
 				<div class="ueber1">
-					<h1><a href="Verkauf1.html">Produkt - 1</a></h1>
+					<h1><a class ="one" href="Verkauf1.html">Handwäsche</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="Verkauf2.html">Produkt - 2</a></h1>
+					<h1><a class="one" href="Verkauf2.html">Polituren und Poliermaschinen</a></h1>
 				</div>
 			</div>
 			<div class="bildle">
 				<div class="ueber1">
-					<h1><a href="Verkauf3.html">Produkt - 3</a></h1>
+					<h1><a class ="one" href="Verkauf3.html">Versiegelungen und Wachse</a></h1>
 
 				</div>
 			</div>
@@ -99,7 +99,7 @@
 				<!-- footer -->
 	<div class="footer-basic">
 			<footer>
-				<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
+				<p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
 			</footer>
 		</div>
 	</body>
