--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-  <link rel="stylesheet" href="Stylesheet.css">
-  <meta charset="utf-8" />
-  <title>Lackversiegelung</title>
+	<link rel="stylesheet" href="Stylesheet.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Polituren und Poliermaschinen</title>
 	<link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="../css/Stylesheet.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body id="kkk">
+		<script src="../js/calc.js"></script>
+	</head>
+  <body>
     <div class="pointer">
 			<div class="logo" onclick="window.location.href='start.html'">
 	  		<img src="../img/DeluxeCar.png"/>
@@ -19,95 +21,129 @@
 		</div>
 	<nav>
 			<ul>
-        <li><a href="start.html">Startseite</a></li>
-				<li><a href="Verkauf1.html">Produkte - 1</a></li>
-				<li><a href="Verkauf2.html">Produkte - 2</a></li>
-				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="start.html">Startseite</a></li>
+				<li><a href="Verkauf1.html">Handwäsche</a></li>
+				<li><a href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+				<li><a href="Verkauf3.html">Versiegelungen und Wachse</a></li>
 				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
 
-	<div class="col-lg-8 col-md-10 mx-auto">
-		<div id="lastueber">
-			<h1>Lackversiegelung</h1>
-			<h2 class="subheading">Jetzt sind wir beim letzten Schritt angelangt.</h2>
-			<span class="meta">Das Auto wurde gewaschen, geknetet und poliert.
-				Damit das Fahrzeug möglichst lange in diesem Zustand bleibt, sollte man ihn vor Umwelteinflüssen
-				schützen. Hierfür kann man entweder ein Wachs oder eine Keramik- bzw. Nanoversiegelung auftragen. Hierbei
-				gibt es jeweils Vor- und Nachteile, die man wissen sollte.</span>
-			</div>
-			</div>
+	<div class="currentposition"><h7>Polituren und Poliermaschinen</h7></div>
 
-	<div class="mycontainerzwo">
-		<div class="thumbnail2">
-			<div id="caption2">
-			<h2 id="xx">Wachs</h2>
-			</div>
-		<div>
-		<table class="proncon">
-					<tr>
-						<th colspan="1">Vorteile</th>
-						<th colspan="1">Nachteile</th>
-					</tr>
+	<div class="container wasdienedgeschafthaben">
+			<div class="row">
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+									<div class="product-image2">
+											<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+											</a>
+													<a class="add-to-cart" href="">Ist ein Allzweckreiniger, geeignet um Türeinstiege,
+													Sitze, Amaturenbretter etc. zu reinigen. (kann für die meisten Dinge
+													im Innen- oder Motorraum genutzt werden)</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 1</a></h3>
+											<span class="price">€9.99</span>
+									</div>
+							</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+								<div class="product-image2">
+										<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
+												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
+												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+										</a>
 
-					<tr>
-						<td colspan="1">
-						<ul>
-							<li>geringerer Preis</li>
-							<li>einfacher abtragbar</li>
-							<li>größere Farbtiefe/Glanzeffekt</li>
-							<li>besteht oft aus natürlichen Inhaltsstoffen, wie Carnauba Wachs
-						</ul>
-						</td>
+										<a class="add-to-cart" href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Hoch dosierte Mischung des Allzweckreinigers, hiermit kann man
+												problemlos alte Wachsschichten oder ähnliches auf dem Lack anlösen und entfernen.</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 2</a></h3>
+											<span class="price">€9.99</span>
+									</div>
+							</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+									<div class="product-image2">
+											<a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41386xoj3IL.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71OYppZWGqL._SL1500_.jpg">
+											</a>
 
-						<td colspan="1">
-						<ul>
-							<li>ist nur eine dünne Schicht über dem Lack</li>
-							<li>geringere Standzeit</li>
-						</ul>
-						</td>
-					</tr>
-				</table>
-				</div>
-			</div>
-		<div class="thumbnail2">
+											<a class="add-to-cart" href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
+													wie beispielsweise die GLORIA FM10</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">ValetPRO Snow Foam</a></h3>
+											<span class="price">€11.49</span>
+									</div>
+							</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+									<div class="product-image2">
+											<a href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
+											</a>
 
-			<div id="caption3">
-			<h2 id="xy">Versiegelung</h2>
-			</div>
+											<a class="add-to-cart" href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">Alternative Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
+													wie beispielsweise die GLORIA FM10.</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">GLORIA Top Foam</a></h3>
+											<span class="price">€14.99</span>
+									</div>
+							</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+									<div class="product-image2">
+											<a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">
+													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
+											</a>
+											<a class="add-to-cart" href="https://www.amazon.de/Lackpeeling-Reinigungs-ADBL-Gleitmittel-Reinigunsknete/dp/B07NL944JN/ref=sr_1_fkmr0_1?__mk_de_DE=ÅMÅŽÕÑ&keywords=Clay+Lube+%28SONAX%29&qid=1560667269&s=gateway&sr=8-1-fkmr0">Wasser-Shampoo-Gemisch, besteht aus Wasser und SONAX AutoShampoo. Wird als Gleitmittel für die Knete verwendet,
+													um das Auto von Flogrost, Baumharz etc. zu befreien.</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">Clay Lube (SONAX)</a></h3>
+											<span class="price">€5.79</span>
+									</div>
+							</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+							<div class="product-grid2">
+									<div class="product-image2">
+											<a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/617WICm-brL._SL1500_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81vKFW0RCrL._SL1500_.jpg">
+											</a>
 
-			<div>
-			<table class="proncon">
-				<tr>
-					<th>Vorteile</th>
-					<th>Nachteile</th>
-				</tr>
-				<tr>
-					<td>
-					<ul>
-						<li>höhere Standzeit</li>
-						<li>mehrschichtig auftragbar</li>
-						<li>stärkerer Lackschutz</li>
-					</ul>
-					</td>
-					<td>
-					<ul>
-						<li>hoher Preis</li>
-						<li>keine große Farbtiefe/Glanzeffekt</li>
-						<li>schwer abtragbar</li>
-						<li>besteht meist nur aus Chemie </li>
-					</ul>
-					</td>
-				</tr>
-			</table>
+											<a class="add-to-cart" href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Kontrollreiniger, dient dazu die Lackoberfläche zu entfetten. Hiermit kann nach dem Polieren die übrigen
+													Politurreste entfernen und den Lack perfekt entfetten, um danach beispielsweise ein Wachs aufzutragen.</a>
+									</div>
+									<div class="product-content">
+											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Isopropanol</a></h3>
+											<span class="price">€9.90</span>
+									</div>
+							</div>
+					</div>
+
 			</div>
-		</div>
 	</div>
+	<hr>
 			<!-- footer -->
+
 <div class="footer-basic">
 		<footer>
-			<p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
+      <p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
 		</footer>
 	</div>
-   </body>
-   </html>
+  </body>
+</html>
