--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -1,201 +1,47 @@
 <!DOCTYPE html>
-<html lang="de">
-  <head>
-	<link rel="stylesheet" href="Stylesheet.css">
-	<script type="text/javascript" src="Mischungsverhältnisrechner.js"></script>
-    <meta charset="utf-8" />
+<html>
+<head>
+	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Mischungsverhältnisrechner</title>
+    <title>Warenkorb</title>
+
 	<link rel="stylesheet" href="../css/bootstrap.css">
-		<link rel="stylesheet" href="../css/Stylesheet.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-		<script src="../js/calc.js"></script>
-	</head>
-  <body>
-    <div class="pointer">
+	<link rel="stylesheet" href="../css/Stylesheet.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<!--
+	1. Bootstrap Css
+	2. Main css
+	3. & 4. Footer social icons
+	5&6 Scripte für dies das u know
+	-->
+</head>
+	<body>
+		<div class="pointer">
 			<div class="logo" onclick="window.location.href='start.html'">
 	  		<img src="../img/DeluxeCar.png"/>
 	  	</div>
 		</div>
-	<nav>
+		<nav>
 			<ul>
-        <li><a href="start.html">Startseite</a></li>
-				<li><a href="Verkauf1.html">Produkte - 1</a></li>
-				<li><a href="Verkauf2.html">Produkte - 2</a></li>
-				<li><a href="Verkauf3.html">Produkte - 3</a></li>
+				<li><a href="start.html">Startseite</a></li>
+				<li><a href="Verkauf1.html">Handwäsche</a></li>
+				<li><a href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+				<li><a href="Verkauf3.html">Versiegelungen und Wachse</a></li>
 				<li><a href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
-
-
-<div class="mycontainer space">
-	<div class="item1">
-	<h1> Mischungsverhältnisrechner </h1>
-	<p> Mit unserem Rechner ist es kein Problem mehr das richtige Mischungsverhältnis herauszufinden.
-	Wählen Sie ganz einfach das gewünschte Produkt aus und geben Sie die benötigte Gesamtmenge ein.
-	Unser Rechner rechnet Ihnen ganz ohne Aufwand aus, wie viel Wasser und wie viel Produkt Sie
-	mischen müssen, um das perfekte Ergebnis zu erhalten.</p>
-	</div>
-	<div class="item2 bigger">
-	<table>
-	<tr>
-		<th> Gewünschtes Produkt* </th>
-		<th> Gesamtmenge </th>
-	</tr>
-	<tr>
-		<td>
-		<div class="selectcss fa fa-angle-down">
-			<select id="Produktliste">
-				<option value="Koch Chemie Green Star 1">Koch Chemie Green Star 1</option>
-				<option value="Koch Chemie Green Star 2">Koch Chemie Green Star 2</option>
-				<option value="ValetPRO Snow Foam">ValetPRO Snow Foam</option>
-				<option value="GLORIA Top Foam">GLORIA Top Foam</option>
-				<option value="Clay Lube (SONAX)">Clay Lube (SONAX)</option>
-				<option value="Isopropanol">Isopropanol</option>
-			</select>
-		</div>
-		</td>
-		<td><input id="Gesamtmenge" type="text" name="Gesamtmenge" size="5" value="0"><label for="nme">&nbsp    ml</td>
-	</tr>
-	<tr>
-		<td><div class="butt"><button onclick="Rechner()"> <svg viewBox="0 0 180 60">
-				<path d="M180,60 0,60 0,0 180,0z"></path>
-			</svg><span>Rechnen</span> </button></div></td>
-		<td><div class="butt"><button id="Resetbutton" onclick="Reset()"> <svg viewBox="0 0 180 60">
-				<path d="M180,60 0,60 0,0 180,0z"></path>
-			</svg><span>Reset</span> </button></div></td>
-	</tr>
-
-	<tr>
-		<td><span id="DestilliertesWasser"></span></td>
-		<td><span id='DestWasser'></span></td>
-	</tr>
-	<tr>
-		<td><span id="selectedProdukt"></span></td>
-		<td><span id="Produktmenge"></span></td>
-	</tr>
-
-	</table>
-	</div>
-</div>
-
-	<div class="container wasdienedgeschafthaben">
-			<h3 class="h3">Beschreibung und Verwendungszweck der Produkte: </h3>
-			<div class="row">
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-											<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
-											</a>
-													<a class="add-to-cart" href="">Ist ein Allzweckreiniger, geeignet um Türeinstiege,
-													Sitze, Amaturenbretter etc. zu reinigen. (kann für die meisten Dinge
-													im Innen- oder Motorraum genutzt werden)</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 1</a></h3>
-											<span class="price">€9.99</span>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-								<div class="product-image2">
-										<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
-										</a>
-
-										<a class="add-to-cart" href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Hoch dosierte Mischung des Allzweckreinigers, hiermit kann man
-												problemlos alte Wachsschichten oder ähnliches auf dem Lack anlösen und entfernen.</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 2</a></h3>
-											<span class="price">€9.99</span>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-											<a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41386xoj3IL.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71OYppZWGqL._SL1500_.jpg">
-											</a>
-
-											<a class="add-to-cart" href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">ValetPRO Snow Foam</a></h3>
-											<span class="price">€11.49</span>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-											<a href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
-											</a>
-
-											<a class="add-to-cart" href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">Alternative Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10.</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">GLORIA Top Foam</a></h3>
-											<span class="price">€14.99</span>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-											<a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">
-													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
-											</a>
-											<a class="add-to-cart" href="https://www.amazon.de/Lackpeeling-Reinigungs-ADBL-Gleitmittel-Reinigunsknete/dp/B07NL944JN/ref=sr_1_fkmr0_1?__mk_de_DE=ÅMÅŽÕÑ&keywords=Clay+Lube+%28SONAX%29&qid=1560667269&s=gateway&sr=8-1-fkmr0">Wasser-Shampoo-Gemisch, besteht aus Wasser und SONAX AutoShampoo. Wird als Gleitmittel für die Knete verwendet,
-													um das Auto von Flogrost, Baumharz etc. zu befreien.</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">Clay Lube (SONAX)</a></h3>
-											<span class="price">€5.79</span>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-											<a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/617WICm-brL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81vKFW0RCrL._SL1500_.jpg">
-											</a>
-
-											<a class="add-to-cart" href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Kontrollreiniger, dient dazu die Lackoberfläche zu entfetten. Hiermit kann nach dem Polieren die übrigen
-													Politurreste entfernen und den Lack perfekt entfetten, um danach beispielsweise ein Wachs aufzutragen.</a>
-									</div>
-									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Isopropanol</a></h3>
-											<span class="price">€9.90</span>
-									</div>
-							</div>
-					</div>
-
-			</div>
-	</div>
-	<hr>
+		
+		<div class="currentposition"><h7>Warenkorb</h7></div>
+			
 			<!-- footer -->
-
-<div class="footer-basic">
-		<footer>
-      <p class="copyright">Marcus,Fabian,Leon,Caspar © 2020 Webanwendung2</p>
-		</footer>
-	</div>
-  </body>
+	<div class="footer">
+			<footer>
+				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+			</footer>
+		</div>
+	</body>
 </html>
+
