--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -36,50 +36,46 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71jS6sdMXsL._AC_SY355_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/611G-aqXm9L._AC_SY879_.jpg">
 											</a>
-													<a class="add-to-cart" href="">Ist ein Allzweckreiniger, geeignet um Türeinstiege,
-													Sitze, Amaturenbretter etc. zu reinigen. (kann für die meisten Dinge
-													im Innen- oder Motorraum genutzt werden)</a>
+													<a class="add-to-cart" href="">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 1</a></h3>
-											<span class="price">€9.99</span>
+											<h3 class="title"><a href="">Menzerna 400</a></h3>
+											<span class="price">€13.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 								<div class="product-image2">
-										<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+										<a href="">
+												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71GXjnO4TBL._AC_SY355_.jpg">
+												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71GXjnO4TBL._AC_SY355_.jpg">
 										</a>
 
-										<a class="add-to-cart" href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Hoch dosierte Mischung des Allzweckreinigers, hiermit kann man
-												problemlos alte Wachsschichten oder ähnliches auf dem Lack anlösen und entfernen.</a>
+										<a class="add-to-cart" href=""> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 2</a></h3>
-											<span class="price">€9.99</span>
+											<h3 class="title"><a href="">Menzerna 1000</a></h3>
+											<span class="price">€11.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41386xoj3IL.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71OYppZWGqL._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71sKKRfOn-L._AC_SY355_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71sKKRfOn-L._AC_SY355_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10</a>
+											<a class="add-to-cart" href="">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">ValetPRO Snow Foam</a></h3>
+											<h3 class="title"><a href="">Menzerna 2500</a></h3>
 											<span class="price">€11.49</span>
 									</div>
 							</div>
@@ -87,50 +83,47 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71chQo4zSnL._AC_SY355_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71chQo4zSnL._AC_SY355_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">Alternative Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10.</a>
+											<a class="add-to-cart" href="">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">GLORIA Top Foam</a></h3>
-											<span class="price">€14.99</span>
+											<h3 class="title"><a href="">Menzerna 3500</a></h3>
+											<span class="price">€12.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">
-													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jWpg%2B4qHL._AC_SY450_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/615CMajGm0L._AC_SY450_.jpg">
 											</a>
-											<a class="add-to-cart" href="https://www.amazon.de/Lackpeeling-Reinigungs-ADBL-Gleitmittel-Reinigunsknete/dp/B07NL944JN/ref=sr_1_fkmr0_1?__mk_de_DE=ÅMÅŽÕÑ&keywords=Clay+Lube+%28SONAX%29&qid=1560667269&s=gateway&sr=8-1-fkmr0">Wasser-Shampoo-Gemisch, besteht aus Wasser und SONAX AutoShampoo. Wird als Gleitmittel für die Knete verwendet,
-													um das Auto von Flogrost, Baumharz etc. zu befreien.</a>
+											<a class="add-to-cart" href="">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">Clay Lube (SONAX)</a></h3>
-											<span class="price">€5.79</span>
+											<h3 class="title"><a href="">DINO Kraftpaket 9mm</a></h3>
+											<span class="price">€69.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/617WICm-brL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81vKFW0RCrL._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/610z0xMLrjL._AC_SX425_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/51GAAh-chaL._AC_SY606_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Kontrollreiniger, dient dazu die Lackoberfläche zu entfetten. Hiermit kann nach dem Polieren die übrigen
-													Politurreste entfernen und den Lack perfekt entfetten, um danach beispielsweise ein Wachs aufzutragen.</a>
+											<a class="add-to-cart" href="">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Isopropanol</a></h3>
-											<span class="price">€9.90</span>
+											<h3 class="title"><a href="">Rupes BigFoot</a></h3>
+											<span class="price">€399.90</span>
 									</div>
 							</div>
 					</div>
