--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -36,51 +36,47 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
 											</a>
-													<a class="add-to-cart" href="">Ist ein Allzweckreiniger, geeignet um Türeinstiege,
-													Sitze, Amaturenbretter etc. zu reinigen. (kann für die meisten Dinge
-													im Innen- oder Motorraum genutzt werden)</a>
+													<a class="add-to-cart" href="">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 1</a></h3>
-											<span class="price">€9.99</span>
+											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</a></h3>
+											<span class="price">€12.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 								<div class="product-image2">
-										<a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51x0cpphM8L._SL1000_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/316ibiV%2BVNL.jpg">
+										<a href="">
+												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
+												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
 										</a>
 
-										<a class="add-to-cart" href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Hoch dosierte Mischung des Allzweckreinigers, hiermit kann man
-												problemlos alte Wachsschichten oder ähnliches auf dem Lack anlösen und entfernen.</a>
+										<a class="add-to-cart" href="">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Koch-Chemie-Green-Universalreiniger-1000ml/dp/B011OKX44S/ref=sr_1_3?__mk_de_DE=ÅMÅŽÕÑ&keywords=Koch+Chemie+Green+Star&qid=1560666313&s=gateway&sr=8-3">Koch Chemie Green Star 2</a></h3>
-											<span class="price">€9.99</span>
+											<h3 class="title"><a href="">2x Eimer mit Grit Guard</a></h3>
+											<span class="price">€54.99</span>
 									</div>
 							</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41386xoj3IL.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71OYppZWGqL._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/31rUnOOeAjL._AC_SX450_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10</a>
+											<a class="add-to-cart" href="">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/ValetPRO-EC145L-Neutral-Snow-Liter/dp/B00JS9IRSQ/ref=sr_1_6?__mk_de_DE=ÅMÅŽÕÑ&keywords=ValetPRO+Snow+Foam&qid=1560666973&s=gateway&sr=8-6">ValetPRO Snow Foam</a></h3>
-											<span class="price">€11.49</span>
+											<h3 class="title"><a href="">Gloria FM10</a></h3>
+											<span class="price">€29.99</span>
 									</div>
 							</div>
 					</div>
@@ -92,11 +88,10 @@
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">Alternative Schaumsprüher-Füllung für die Vorwäsche, diese Mischung kann man für die eigenen Schaumsprüher verwenden,
-													wie beispielsweise die GLORIA FM10.</a>
+											<a class="add-to-cart" href="">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">GLORIA Top Foam</a></h3>
+											<h3 class="title"><a href="">GLORIA Top Foam</a></h3>
 											<span class="price">€14.99</span>
 									</div>
 							</div>
@@ -104,15 +99,14 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">
+											<a href="">
 													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
 											</a>
-											<a class="add-to-cart" href="https://www.amazon.de/Lackpeeling-Reinigungs-ADBL-Gleitmittel-Reinigunsknete/dp/B07NL944JN/ref=sr_1_fkmr0_1?__mk_de_DE=ÅMÅŽÕÑ&keywords=Clay+Lube+%28SONAX%29&qid=1560667269&s=gateway&sr=8-1-fkmr0">Wasser-Shampoo-Gemisch, besteht aus Wasser und SONAX AutoShampoo. Wird als Gleitmittel für die Knete verwendet,
-													um das Auto von Flogrost, Baumharz etc. zu befreien.</a>
+											<a class="add-to-cart" href="">Shampoo für die Autowäsche.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/SONAX-314541-AutoShampoo-2-Liter/dp/B0024X3BAC/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sonax+autoshampoo&qid=1560949706&s=gateway&sr=8-3">Clay Lube (SONAX)</a></h3>
+											<h3 class="title"><a href="">SONAX AutoShampoo</a></h3>
 											<span class="price">€5.79</span>
 									</div>
 							</div>
@@ -120,17 +114,16 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-Reinigungsalkohol-Reinigungsmittel-Fettentfernung/dp/B01MSW3WEU/ref=sr_1_1_sspa?__mk_de_DE=ÅMÅŽÕÑ&keywords=Isopropanol&qid=1560667448&s=gateway&sr=8-1-spons&psc=1">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/617WICm-brL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81vKFW0RCrL._SL1500_.jpg">
+											<a href="">
+													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
 											</a>
 
-											<a class="add-to-cart" href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Kontrollreiniger, dient dazu die Lackoberfläche zu entfetten. Hiermit kann nach dem Polieren die übrigen
-													Politurreste entfernen und den Lack perfekt entfetten, um danach beispielsweise ein Wachs aufzutragen.</a>
+											<a class="add-to-cart" href="">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="https://www.amazon.de/Isopropanol-Isopropylalkohol-2-Propanol-Reinigungsmittel-Ausgie%C3%9Fer/dp/B07D4N472Q/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=isopropanol&qid=1560950237&s=gateway&sr=8-3">Isopropanol</a></h3>
-											<span class="price">€9.90</span>
+											<h3 class="title"><a href="">Petzolds Lackknete</a></h3>
+											<span class="price">€16.90</span>
 									</div>
 							</div>
 					</div>
