--- a/html/oder_process.html
+++ b/html/oder_process.html
@@ -19,24 +19,19 @@
 	-->
 </head>
 	<body>
-		
+		<div class="pointer">
+			<div class="logo" onclick="window.location.href='start.html'">
+			<img src="../img/DeluxeCar.png"/>
+			</div>
+		</div>
 		<nav>
 			
 			<ul>
-				<li><a href="start.html">Startseite</a></li>
-				<li><a href="Verkauf1.html">Handwäsche</a></li>
-				<li><a href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-				<li><a href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-				<li><a href="Warenkorb.html">Warenkorb</a></li>
-			</ul>
-			<ul>
-				<li>
-					<div class="pointer">
-						<div class="logo" onclick="window.location.href='start.html'">
-						<img src="../img/DeluxeCar.png"/>
-						</div>
-					</div>
-				</li>
+				<li><a class="navi" href="start.html">Startseite</a></li>
+				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
+				<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+				<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
   
