--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -68,7 +68,7 @@
 									<div class="product-image2">
 											<a href="">
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/31rUnOOeAjL._AC_SX450_.jpg">
+													<img class="pic-2" src="../img/Spruehkoepfe.jpg">
 											</a>
 
 											<a class="add-to-cart" href="">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
