--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -37,8 +37,8 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71jS6sdMXsL._AC_SY355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/611G-aqXm9L._AC_SY879_.jpg">
+													<img class="pic-1" src="../img/Menzerna400.jpg">
+													<img class="pic-2" src="../img/Menzerna400.jpg">
 											</a>
 													<a class="add-to-cart" href="">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
 									</div>
@@ -52,8 +52,8 @@
 							<div class="product-grid2">
 								<div class="product-image2">
 										<a href="">
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71GXjnO4TBL._AC_SY355_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71GXjnO4TBL._AC_SY355_.jpg">
+												<img class="pic-1" src="../img/Menzerna1000.jpg">
+												<img class="pic-2" src="../img/Menzerna1000.jpg">
 										</a>
 
 										<a class="add-to-cart" href=""> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
@@ -68,8 +68,8 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71sKKRfOn-L._AC_SY355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71sKKRfOn-L._AC_SY355_.jpg">
+													<img class="pic-1" src="../img/Menzerna2500.jpg">
+													<img class="pic-2" src="../img/Menzerna2500.jpg">
 											</a>
 
 											<a class="add-to-cart" href="">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
@@ -84,8 +84,8 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71chQo4zSnL._AC_SY355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71chQo4zSnL._AC_SY355_.jpg">
+													<img class="pic-1" src="../img/Menzerna3500.jpg">
+													<img class="pic-2" src="../img/Menzerna3500.jpg">
 											</a>
 
 											<a class="add-to-cart" href="">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
